SET( GOFIGURE_APPLICATION_SOURCE_LIST
    gofigure.cxx
    )

INCLUDE_DIRECTORIES( ${GOFIGURE2_BINARY_DIR}/Main/  )

QT4_WRAP_UI( QGoMainWindow_UI_H ${QGoMainWindow_UI} )

QT4_WRAP_CPP( QGoGUISRC_MOC ${QGoGUISRC_HDRS} )

SET_SOURCE_FILES_PROPERTIES( ${QGoGUISRC_CXX} PROPERTIES
  OBJECT_DEPENDS "${QGoMainWindow_UI_H}"
  )

SET_SOURCE_FILES_PROPERTIES( ${QGoGUISRC_MOC} PROPERTIES
  OBJECT_DEPENDS "${QGoMainWindow_UI_H}"
  )

QT4_ADD_RESOURCES( QGoMainWindow_QRC
  ${QGoResourceFile}
)

SET( GUI_TYPE )

IF( APPLE )
  SET( GUI_TYPE MACOSX_BUNDLE )

  SET( MACOSX_BUNDLE_ICON_FILE
    ${GOFIGURE2_SOURCE_DIR}/Resources/myapp.icns
  )

  SET( GOFIGURE_APPLICATION_SOURCE_LIST
    ${GOFIGURE_APPLICATION_SOURCE_LIST}
    ${MACOSX_BUNDLE_ICON_FILE}
  )

SET( MACOSX_BUNDLE_SHORT_VERSION_STRING
    ${GOFIGURE2_VERSION}
    )

  SET( MACOSX_BUNDLE_VERSION
    ${GOFIGURE2_VERSION}
    )

  SET( MACOSX_BUNDLE_LONG_VERSION_STRING
    Version ${GOFIGURE2_VERSION}
    )

  SET_SOURCE_FILES_PROPERTIES( ${MACOSX_BUNDLE_ICON_FILE} PROPERTIES
    MACOSX_PACKAGE_LOCATION Resources
    )

ENDIF( APPLE )

ADD_EXECUTABLE( gofigure
  ${GUI_TYPE}
 ${GOFIGURE_APPLICATION_SOURCE_LIST}
 ${QGoGUI_SRC}
 ${QGoGUISRC_MOC}
 ${QGoMainWindow_QRC}
 )

TARGET_LINK_LIBRARIES( gofigure
    QGoGui
    QGoIO
    ITKBasicFilters
    ITKNumerics
    ITKCommon
    ITKIO
    itkQt
 )

INSTALL( TARGETS gofigure
     RUNTIME DESTINATION bin
     BUNDLE  DESTINATION bin
     LIBRARY DESTINATION lib
     ARCHIVE DESTINATION lib/static
     COMPONENT applications
     )

